--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,14 +6,14 @@ security.jwt.secret-key=2028949a1f27800620ff82a012435756f85c379499dbed566f72813b
 security.jwt.expiration-time=7200000
 
 #Postgres
-spring.datasource.url=jdbc:postgresql://localhost:5433/minguard
+spring.datasource.url=jdbc:postgresql://minguard_db:5432/minguard
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 #Flyway
 spring.flyway.enabled=true
-spring.flyway.url=jdbc:postgresql://localhost:5433/minguard
+spring.flyway.url=jdbc:postgresql://minguard_db:5432/minguard
 spring.flyway.user=postgres
 spring.flyway.password=postgres
 spring.flyway.group=true
