Add basic incident image usage

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,15 @@ app.security.unauthenticated-endpoints=/auth/**,/swagger-ui/**,/v3/api-docs/**,/
 
 #Jpa
 spring.jpa.hibernate.ddl-auto=none
+
+#Aws
+#cloud.aws.credentials.accessKey=
+#cloud.aws.credentials.secretAccessKey=
+#cloud.aws.credentials.sessionToken=
+cloud.aws.region.static=us-east-1
+
+cloud.aws.s3.bucket.incident=amzn-s3-minguard-incident-bucket
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.max-file-size=20MB
