--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,12 @@
             <scope>runtime</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk</artifactId>
+            <version>1.12.777</version>
+        </dependency>
+
     </dependencies>
 
     <build>
