--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 server.port=8089
 
+server.ssl.key-store=classpath:keystore.jks
+server.ssl.key-store-password=password
+server.ssl.key-store-type=JKS
+server.ssl.key-alias=selfsigned
+
 spring.application.name=minguard-be
 spring.profiles.active=prod
 
@@ -24,3 +29,5 @@ cloud.aws.s3.bucket.incident=amzn-s3-minguard-incident-bucket
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-request-size=10MB
 spring.servlet.multipart.max-file-size=20MB
+
+
