Fix ticket mapping issue

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,9 +14,9 @@ app.security.unauthenticated-endpoints=/auth/**,/swagger-ui/**,/v3/api-docs/**,/
 spring.jpa.hibernate.ddl-auto=none
 
 #Aws
-#cloud.aws.credentials.accessKey=
-#cloud.aws.credentials.secretAccessKey=
-#cloud.aws.credentials.sessionToken=
+cloud.aws.credentials.accessKey=1
+cloud.aws.credentials.secretAccessKey=1
+cloud.aws.credentials.sessionToken=1
 cloud.aws.region.static=us-east-1
 
 cloud.aws.s3.bucket.incident=amzn-s3-minguard-incident-bucket
