--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ app.cors.allowed-methods=GET,POST,PUT,DELETE,PATCH
 app.cors.allowed-headers=Authorization,Content-Type
 
 #Security
-app.security.unauthenticated-endpoints=/auth/**,/swagger-ui/**,/v3/api-docs/**,/swagger-ui.html
+app.security.unauthenticated-endpoints=/auth/**,/swagger-ui/**,/v3/api-docs/**,/swagger-ui.html,/third-party/**
 
 #Jpa
 spring.jpa.hibernate.ddl-auto=none
